kube_manifests/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw-2-service

spec:
  selector:
    app: hw-2-app

  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
